reorganise folder, change css to scss and add webpack scss-loader

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "colorette": "^2.0.20",
         "commander": "^2.20.3",
         "cross-spawn": "^7.0.3",
+        "css-loader": "^6.8.1",
         "electron-to-chromium": "^1.4.466",
         "enhanced-resolve": "^5.15.0",
         "envinfo": "^7.10.0",
@@ -66,6 +67,8 @@
         "resolve-cwd": "^3.0.0",
         "resolve-from": "^5.0.0",
         "safe-buffer": "^5.2.1",
+        "sass": "^1.64.0",
+        "sass-loader": "^13.3.2",
         "schema-utils": "^3.3.0",
         "serialize-javascript": "^6.0.1",
         "shallow-clone": "^3.0.1",
@@ -73,6 +76,7 @@
         "shebang-regex": "^3.0.0",
         "source-map": "^0.6.1",
         "source-map-support": "^0.5.21",
+        "style-loader": "^3.3.3",
         "supports-color": "^8.1.1",
         "supports-preserve-symlinks-flag": "^1.0.0",
         "tapable": "^2.2.1",
@@ -88,7 +92,6 @@
         "which": "^2.0.2",
         "wildcard": "^2.0.1"
     },
-    "devDependencies": {},
     "scripts": {
         "start": "webpack --config webpack.config.js"
     },
