--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
         "acorn-import-assertions": "^1.9.0",
         "ajv": "^6.12.6",
         "ajv-keywords": "^3.5.2",
+        "autoprefixer": "10.4.5",
         "browserslist": "^4.21.9",
         "buffer-from": "^1.1.2",
         "caniuse-lite": "^1.0.30001517",
         "chrome-trace-event": "^1.0.3",
+        "clean-webpack-plugin": "^4.0.0",
         "clone-deep": "^4.0.1",
         "colorette": "^2.0.20",
         "commander": "^2.20.3",
@@ -29,12 +31,14 @@
         "fast-deep-equal": "^3.1.3",
         "fast-json-stable-stringify": "^2.1.0",
         "fastest-levenshtein": "^1.0.16",
+        "file-loader": "^6.2.0",
         "find-up": "^4.1.0",
         "function-bind": "^1.1.1",
         "glob-to-regexp": "^0.4.1",
         "graceful-fs": "^4.2.11",
         "has": "^1.0.3",
         "has-flag": "^4.0.0",
+        "html-loader": "^4.2.0",
         "import-local": "^3.1.0",
         "interpret": "^3.1.1",
         "is-core-module": "^2.12.1",
@@ -87,15 +91,20 @@
         "watchpack": "^2.4.0",
         "webpack": "^5.88.2",
         "webpack-cli": "^5.1.4",
+        "webpack-dev-server": "^4.15.1",
         "webpack-merge": "^5.9.0",
         "webpack-sources": "^3.2.3",
         "which": "^2.0.2",
         "wildcard": "^2.0.1"
     },
     "scripts": {
-        "start": "webpack --config webpack.config.js"
+        "start": "webpack-dev-server --config webpack.dev.js --open",
+        "build": "webpack --config webpack.prod.js"
     },
     "keywords": [],
     "author": "",
-    "license": "ISC"
+    "license": "ISC",
+    "devDependencies": {
+        "html-webpack-plugin": "^5.5.3"
+    }
 }
